# r_flightsim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  imgui.ini
assets/airports/: sample.json
assets/planes/a320neo/: profile.yaml
assets/planes/b1_lancer/: profile.yaml
assets/planes/b737_400/: profile.yaml
assets/planes/cessna_172/: profile.yaml
assets/planes/concorde/: profile.yaml
assets/planes/dc3/: profile.yaml
assets/planes/dhc7_dash7/: profile.yaml
assets/planes/dscovr/: profile.yaml
assets/planes/hst/: profile.yaml
assets/planes/iss/: profile.yaml
assets/planes/ki61_hien/: profile.yaml
assets/planes/king_air_200/: profile.yaml
assets/planes/kosmos_2554/: profile.yaml
notes/: godot-shader.gshader
old_claudes/: CLAUDE1.md  CLAUDE11.md  CLAUDE2.md  CLAUDE3.md  CLAUDE4.md  CLAUDE5.md  CLAUDE6.md  CLAUDE7.md
shaders/: edge_detect.wgsl  geometry.wgsl  sun.wgsl
src/: ai_traffic.rs  aircraft_profile.rs  airport_gen.rs  airport_markers.rs  another_rust_playground.rs  audio.rs  camera.rs  cli.rs  constants.rs  consts.rs  coords.rs  cube.rs  draw_models.rs  draw_objects.rs  earth.rs  fixed_structs.rs  flying.rs  grid.rs  gui.rs  imgui_wrapper.rs  input_handling.rs  load_assets.rs  logo.rs  main.rs  menu.rs  obj_loader.rs  old_main.rs  physics.rs  pos_fun.rs  renderer.rs  scene.rs  settings.rs  sim.rs  sim_state.rs  telemetry.rs  tle.rs
src/atc/: facilities.rs  mod.rs  overlay.rs  phraseology.rs  types.rs
src/celestial/: bodies.rs  mod.rs  moon.rs  planets.rs  stars.rs  sun.rs  time.rs
src/tts/: audio.rs  mod.rs
(+4 files in other folders)
