[package]
name = "r_flightsim"
version = "0.6.0"
edition = "2021"

[dependencies]
#egui = "0.21.0"
#egui-macroquad = "0.15.0"
macroquad = { version="0.4.12", default-features=false }
#macroquad = { version="0.3.25", default-features=false }
#macroquad-profiler = "0.1.1" # https://not-fl3.github.io/platformer-book/profiling.html
#egui_demo_lib = "0.21.0"
tobj = "4.0.2"

[features]
default = ["audio"]
audio = ["macroquad/audio"]

[profile.release]
opt-level = 2
