[package]
name = "shaderflight"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
tobj = "4"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
ratatui = "0.29"
crossterm = "0.28"
